# sss-rs

./: Cargo.toml
benches/: sss_benchmark.rs
src/: field.rs  lib.rs  num_primes.rs  polynomial.rs
