[package]
name = "sss-rs"
version = "0.1.0"
authors = ["Jam Adams <wodadehencou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmark = []

[dependencies]
num = "0.3.0"
num-integer = { version = "0.1.43", default-features = false }
num-bigint = {version ="0.3.0", features = ["rand"]}
num-traits = "0.2.12"
# num-primes = "0.1.1"
rand = "0.7.3"
thiserror  = "1.0.20"
# ramp = "0.5"
# ramp-primes = "0.4"
# num-bigint = { package = "num-bigint-dig", version = "0.6.0"}

[dev-dependencies]
rand_core = "0.5.1"
criterion = "0.3.3"

[[bench]]
name = "sss_benchmark"
harness = false